# NDKLive

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/haohao/live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/haohao/live/: LivePullActivity.java  LivePushActivity.java  MainActivity.java  MyApp.java  SPUtils.java
app/src/main/java/com/haohao/live/jni/: NativePush.java
app/src/main/java/com/haohao/live/params/: AudioParams.java  VideoParams.java
app/src/main/java/com/haohao/live/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/main/jni/: live.c  queue.c
app/src/main/res/layout/: acticity_live_push.xml  activity_live_pull.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/haohao/live/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
